--- a/pages/demo/styles.module.scss
+++ b/pages/demo/styles.module.scss
@@ -4,3 +4,11 @@
     text-transform: uppercase;
     font-family: monospace;
 }
+
+.container{
+    padding: 1rem 2rem;
+}
+
+.input{
+    padding: 5px 10px;
+}
