jwt authentication example

--- a/pages/demo/styles.module.scss
+++ b/pages/demo/styles.module.scss
@@ -1,5 +1,5 @@
 .title{
-    color: cyan;
+    color: darkgoldenrod;
     font-size: 3rem;
     text-transform: uppercase;
     font-family: monospace;
